<resources>
    <string name="app_name">CREX-Cricket Ex.</string>
    <string name="news">News</string>
    <string name="ipl">IPL</string>
    <string name="home">Home</string>
    <string name="fixture">Fixtures</string>
    <string name="more">More</string>
    <string name="Rs">\u20A8</string>
    <string name="latest_text">91st T20, Sophia Gardens, Cardiff, Wales</string>
    <string name="first_heading">Australia tour of Sri Lanka 2022</string>
    <string name="small_heading">5th T20, M.Chinnaswamy Stadium, North Southern...</string>
    <string name="heading_line">Bangladesh tour of West Indies 2022</string>
    <string name="dummy_Text">NED vs AUS | 2nd ODI | England pocket the series by winning 2nd ODI in a comfortable manner...
</string>
    <string name="information">For any kind of information or queries mail us.</string>
    <string name="about_news">Gold Rate Today, 1st June 2022: Yellow Metal Witnesses Massive Drop. Check Revised Rates in Your City Here</string>
    <string name="privacyPolicy">By purchasing you agree to our and </string>
    <string name="privact2"><u><B>Privacy Policy </B></u></string>
    <string name="privact3"><u><B>Terms. </B></u></string>

    <string name="login">Already a paytm paid user?</string>
    <string name="loginNumber">Enter your paytm mobile number</string>
    <string name="loginNow">Login now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="termCondition">Term &amp; Conditions</string>
    <string name="title_activity_otp_login">OtpLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="team_score">201-12</string>
    <string name="news_text">We are collecting all latest information, We Will update soon</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="demo_text">Later, Stark develops his suit, adding weapons and other technological
        devices he designed through his company, Stark Industries. He uses the suit and successive
        versions to protect the world as Iron Man.</string>
    <string name="off">OFF</string>
</resources>