<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_news_check"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/home_match_check"
        android:title="@string/ipl" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_new_home_icons"
        android:title="@string/home" />

    <item
        android:id="@+id/fixtures"
        android:icon="@drawable/home_fixture_check"
        android:title="@string/fixture" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/home_more_check"
        android:title="@string/more" />

</menu>